2012-01-08  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* antic.c: Fix accuracy of ANTIC_CPU_CLOCK when NEW_CYCLE_EXACT is enabled.

* monitor.c: Fix accuracy of cycle counts (when displaying the current state)
  when NEX_CYCLE_EXACT is enabled.

* xep80.c: Fix (and simplify) the code for I/O timing - it was not resistant
  to random data appearing in PORTA, which resulted in XEP80 going haywire
  after coldstart. The change breaks binary compatibility of savestates.
  Standardise indentation (tabs instead of spaces).
  Remove the XEP80_ prefix from names of static entities.


2012-01-07  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sdl/input.c: No need to call SDL_GetKeyState() on each frame - moved the
  call to SDL_INPUT_Initialise().

* xep80.[ch]: Removed variables XEP80_first_row, XEP80_last_row - not used
  anywhere.

* cfg.c, xep80_fonts.[ch], xep80.[ch]: Load XEP80 fonts from a ROM image
  instead of storing them in the source file (ROM path stored in config).
  Generate the XEP80 block font algorithmically instead of storing it in the
  source file.

* ui.c, videomode.[ch], xep80.[ch], atari800.man, DOC/USAGE, sdl/video_gl.c:
  Support XEP80's ability to switch the TV system by software. After the
  changes, the maximum height of the screen is 300 lines.

* sdl/video.c: Fix a glitch that appeared during XEP80 initialisation.

* ui.c: Add option to enable/disable XEP80 to the Emulator Settings menu.


2012-01-07  Kostas Nakos  <knakos@gmail.com>
* android/*: Optimize file selector, allow roaming outside of ext. storage dir
             Added an exclusion border for paddle mode


2011-12-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* android/jni/Android.mk.in, dc/Makefile.dc, win32/msc/Makefile: Add missing
  object img_tape.o to platform-specific Makefiles to make them work again
  (see Makefile.in revision 1.52).


2011-11-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c: Remove excessive logging, committed by mistake yesterday.

