@@ -38,6 +38,8 @@ import android.app.AlertDialog;
 import android.webkit.WebView;
 import android.app.Dialog;
 import android.content.DialogInterface;
+import android.preference.EditTextPreference;
+import android.widget.Toast;
 
 
 public final class Preferences extends PreferenceActivity implements Preference.OnPreferenceChangeListener
@@ -45,10 +47,13 @@ public final class Preferences extends PreferenceActivity implements Preference.
 	private static final String TAG = "Preferences";
 	private static final String[] PREF_KEYS = { "up", "down", "left", "right", "fire",
 												"actiona", "actionb", "actionc" };
-	private static final int ACTIVITY_FSEL = 1;
+	private static final int ACTIVITY_FSEL_ROMPATH = 1;
+	private static final int ACTIVITY_FSEL_STATEPATH = 2;
 	private static final int DLG_ABOUT = 1;
 	private static final int DLG_RESET = 2;
+	private static final int DLG_OVRWR = 3;
 	private SharedPreferences _sp;
+	private String _svstfname = null;
 
 	@Override
 	protected void onCreate(Bundle savedInstanceState) {
@@ -65,16 +70,20 @@ public final class Preferences extends PreferenceActivity implements Preference.
 			kp.updateSum();
 		}
 
-		findPreference("rompath").setOnPreferenceClickListener(new OnPreferenceClickListener() {
-			@Override
-			public boolean onPreferenceClick(Preference p) {
-				String val = _sp.getString("rompath", null);
-				Uri u = (val == null) ? null : Uri.fromFile(new File(val));
-				startActivityForResult(new Intent(FileSelector.ACTION_OPEN_PATH, u,
-									   Preferences.this, FileSelector.class), ACTIVITY_FSEL);
-				return true;
-			}
-		});
+		for (final String pref: new String[] {"rompath", "statepath"}) {
+			findPreference(pref).setOnPreferenceClickListener(new OnPreferenceClickListener() {
+				@Override
+				public boolean onPreferenceClick(Preference p) {
+					String val = _sp.getString(pref, null);
+					Uri u = (val == null) ? null : Uri.fromFile(new File(val));
+					startActivityForResult(new Intent(FileSelector.ACTION_OPEN_PATH, u,
+										   Preferences.this, FileSelector.class),
+										   pref.equals("rompath") ? ACTIVITY_FSEL_ROMPATH :
+																	ACTIVITY_FSEL_STATEPATH);
+					return true;
+				}
+			});
+		}
 
 		findPreference("about").setOnPreferenceClickListener(new OnPreferenceClickListener() {
 			@Override
@@ -100,38 +109,82 @@ public final class Preferences extends PreferenceActivity implements Preference.
 				return true;
 			}
 		});
+
+		if (_sp.getString("statepath", null) != null)
+			enableStateSave();
+
+		findPreference("savestate").setOnPreferenceChangeListener(this);
 	}
 
-	@Override
-	public boolean onPreferenceChange(Preference p, Object v) {
-		int k = (Integer) v;
-		KeymapPreference pref;
+	private void enableStateSave() {
+		Preference p = findPreference("savestate");
+		p.setEnabled(true);
+		p.setSummary(getString(R.string.pref_savestate_sum_ena));
+	}
 
-		Log.d(TAG, "Change " + k);
-		for (String key: PREF_KEYS) {
-			if (key.equals(p.getKey()))	continue;
-			pref = (KeymapPreference) findPreference(key);
-			if (k >= 0) {	// check mappings
-				if (pref.getKeymap() == k)
-					return false;
-			} else {		// swap mappings
-				if (pref.getKeymap() == -k) {
-					pref.setKeymap( ((KeymapPreference) p).getKeymap() );
-					return true;
-				}
-			}
+	private boolean saveState(boolean force) {
+		String path = _sp.getString("statepath", null);
+		if (path == null) {
+			Log.d(TAG, "state save path is null");
+			Toast.makeText(this, R.string.savestateerror, Toast.LENGTH_LONG).show();
+			return true;
 		}
+
+		if (!force && new File(path, _svstfname).exists())
+			return false;
+
+		if (!NativeSaveState(path + '/' + _svstfname)) {
+			Toast.makeText(this, R.string.savestateerror, Toast.LENGTH_LONG).show();
+			return true;
+		}
+
+		Toast.makeText(this, R.string.savestateok, Toast.LENGTH_LONG).show();
 		return true;
 	}
 
 	@Override
+	public boolean onPreferenceChange(Preference p, Object v) {
+		if (p.getKey().equals("savestate")) {
+			_svstfname = (String) v + ".a8s";
+			if (!saveState(false))
+				showDialog(DLG_OVRWR);
+			return true;
+		} else {
+			int k = (Integer) v;
+			KeymapPreference pref;
+
+			Log.d(TAG, "Change " + k);
+			for (String key: PREF_KEYS) {
+				if (key.equals(p.getKey()))	continue;
+				pref = (KeymapPreference) findPreference(key);
+				if (k >= 0) {	// check mappings
+					if (pref.getKeymap() == k)
+						return false;
+				} else {		// swap mappings
+					if (pref.getKeymap() == -k) {
+						pref.setKeymap( ((KeymapPreference) p).getKeymap() );
+						return true;
+					}
+				}
+			}
+			return true;
+		}
+	}
+
+	@Override
 	protected void onActivityResult(int reqc, int resc, Intent data) {
+		String pref = "rompath";
+		if (resc != RESULT_OK)	return;
 		switch (reqc) {
-		case ACTIVITY_FSEL:
-			if (resc != RESULT_OK) break;
+		case ACTIVITY_FSEL_STATEPATH:
+			pref = "statepath";
+			enableStateSave();
+			// fallthrough
+		case ACTIVITY_FSEL_ROMPATH:
 			SharedPreferences.Editor e = _sp.edit();
-			e.putString("rompath", data.getData().getPath());
+			e.putString(pref, data.getData().getPath());
 			e.commit();
+			break;
 		}
 	}
 
@@ -169,10 +222,27 @@ public final class Preferences extends PreferenceActivity implements Preference.
 					.create();
 			break;
 
+		case DLG_OVRWR:
+			d = new AlertDialog.Builder(this)
+					.setTitle(R.string.warning)
+					.setIcon(android.R.drawable.ic_dialog_alert)
+					.setMessage(String.format(getString(R.string.savestateoverwrite), _svstfname))
+					.setPositiveButton(R.string.ok, new DialogInterface.OnClickListener() {
+						public void onClick(DialogInterface d, int i) {
+							saveState(true);
+						}
+						})
+					.setNegativeButton(R.string.cancel, null)
+					.create();
+			break;
+
 		default:
 			d = null;
 		}
 
 		return d;
 	}
+
+
+	private native boolean NativeSaveState(String fname);
 }
